--- a/design/index.html
+++ b/design/index.html
@@ -10,60 +10,11 @@
     <script src="angular-drag-and-drop-lists.js"></script>
 	<script src="design.module.js"></script>
     <script src="design.ctrl.js"></script>
+    <script src="design.directive.js"></script>
     
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="design.css" />
 </head>
 <body data-ng-app="design" data-ng-controller="designCtrl as ctrl">
-	<div class="panel panel-default">
-		<div class="panel-heading">Designs</div>
-		<div class="panel-body">
-			<div class="btn-toolbar palette">
-				<button data-ng-repeat="feature in ctrl.models.templates"
-					type="button"
-					class="btn btn-default"
-					dnd-type="'feature'"
-					dnd-draggable="feature"
-					dnd-effect-allowed="copy"
-					dnd-copied="feature.id = feature.id + 1"
-					uib-tooltip="{{feature.name}}">
-					<div class="feature SO{{feature.typ.replace('http://purl.obolibrary.org/obo/SO_', '')}}">
-					</div>						
-				</button>
-			</div>
-			<div class="designs panel-group">
-				<ul dnd-list="ctrl.models.designs"
-					dnd-allowed-types="['design']">
-					<li data-ng-repeat="design in ctrl.models.designs"
-						dnd-type="'design'"
-						dnd-draggable="design"
-						dnd-effect-allowed="move"
-						dnd-moved="ctrl.models.designs.splice($index, 1)"
-						data-ng-class="{selected: ctrl.models.selected === design}">
-						<div class="design panel panel-default">
-		        			<div class="panel-heading">{{design.name}}</div>
-		        			<div class="panel-body">
-								<ul dnd-list="design.features"
-									dnd-allowed-types="['feature']">
-		        					<li data-ng-repeat="feature in design.features"
-		        						data-ng-class="{selected: ctrl.models.selected === feature}"
-										dnd-type="'feature'"
-		            					dnd-draggable="feature"
-		            					dnd-effect-allowed="move"
-		            					dnd-moved="design.features.splice($index, 1)"
-		            					dnd-selected="ctrl.models.selected = feature"
-		            					uib-tooltip="{{feature.name}}">
-										<div class="feature SO{{feature.typ.replace('http://purl.obolibrary.org/obo/SO_', '')}}">
-										</div>
-		        					</li>
-		    					</ul>
-		        			</div>
-		    			</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
+	<design-panel models="ctrl.models">
+	</design-panel>
     <pre>{{ctrl.modelAsJson}}</pre>
 </body>
