Added removeDesign method and interface.

--- a/design/design.html
+++ b/design/design.html
@@ -25,7 +25,10 @@
 				dnd-draggable="design"
 				dnd-effect-allowed="move"
 				dnd-moved="models.designs.splice($index, 1)">
-				<div class="panel-heading">{{design.name}}</div>
+				<div class="panel-heading">{{design.name}}
+					<div class="glyphicon glyphicon-remove pull-right glyphicon-grey" data-ng-click="removeDesign({args: {index: $index}})">
+					</div>
+				</div>
 				<div class="panel-body">
 					<div class="features" dnd-list="design.features" dnd-allowed-types="['feature']">
 						<div data-ng-repeat="feature in design.features"
@@ -41,7 +44,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="glyphicon glyphicon-plus pull-right add-design" data-ng-click="addDesign()">
+		<div class="glyphicon glyphicon-plus pull-right glyphicon-grey" data-ng-click="addDesign()">
 		</div>
 	</div>
 </div>
