--- a/design/index.html
+++ b/design/index.html
@@ -14,7 +14,10 @@
     
 </head>
 <body data-ng-app="design" data-ng-controller="designCtrl as ctrl">
-	<design-panel add-design="ctrl.addDesign()" models="ctrl.models">
+	<design-panel
+		add-design="ctrl.addDesign()"
+		remove-design="ctrl.removeDesign(args)"
+		models="ctrl.models">
 	</design-panel>
     <pre>{{ctrl.modelAsJson}}</pre>
 </body>
