Added horizontal scroll to features panel.

--- a/design/index.html
+++ b/design/index.html
@@ -13,11 +13,17 @@
     <script src="design.directive.js"></script>
     
 </head>
-<body data-ng-app="design" data-ng-controller="designCtrl as ctrl">
-	<design-panel
-		add-design="ctrl.addDesign()"
-		remove-design="ctrl.removeDesign(args)"
-		models="ctrl.models">
-	</design-panel>
-    <pre>{{ctrl.modelAsJson}}</pre>
+<body data-ng-app="design" data-ng-controller="designCtrl as ctrl" style="margin-top: 15px">
+	<div class="container">
+		<div class="col-md-6">
+			<design-panel
+				add-design="ctrl.addDesign()"
+				remove-design="ctrl.removeDesign(args)"
+				models="ctrl.models">
+			</design-panel>
+    	</div>
+    	<div class="col-md-12">
+    		<pre>{{ctrl.modelAsJson}}</pre>
+    	</div>
+    </div>
 </body>
