--- a/design/design.html
+++ b/design/design.html
@@ -6,7 +6,7 @@
 	<div class="panel-heading">Designs</div>
 	<div class="panel-body">
 		<div class="btn-toolbar palette">
-			<button data-ng-repeat="feature in models.templates"
+			<button data-ng-repeat="feature in templates"
 				type="button"
 				class="btn btn-default"
 				dnd-type="'feature'"
@@ -18,27 +18,27 @@
 				</div>
 			</button>
 		</div>
-		<div class="panel-group designs" dnd-list="models.designs" dnd-allowed-types="['design']">
-			<div data-ng-repeat="design in models.designs"
+		<div class="panel-group designs" dnd-list="query().designs" dnd-allowed-types="['design']">
+			<div data-ng-repeat="design in query().designs"
 				class="panel panel-default"
 				dnd-type="'design'"
 				dnd-draggable="design"
 				dnd-effect-allowed="move"
 				dnd-moved="models.designs.splice($index, 1)">
 				<div class="panel-heading">{{design.name}}
-					<div class="glyphicon glyphicon-remove pull-right glyphicon-grey" data-ng-click="removeDesign({args: {index: $index}})">
+					<div class="glyphicon glyphicon-remove pull-right glyphicon-grey" data-ng-click="removeDesign({args: $index})">
 					</div>
 				</div>
 				<div class="panel-body">
 					<div class="features" dnd-list="design.features" dnd-allowed-types="['feature']">
 						<div data-ng-repeat="feature in design.features"
-							data-ng-class="{selected: models.selected === feature}"
+							data-ng-class="{selected: selected() === feature}"
 							class="feature SO{{feature.typ.replace('http://purl.obolibrary.org/obo/SO_', '')}}"
 							dnd-type="'feature'"
 							dnd-draggable="feature"
 							dnd-effect-allowed="move"
 							dnd-moved="design.features.splice($index, 1)"
-							dnd-selected="models.selected = feature">
+							dnd-selected="setSelected({args: feature})">
 						</div>
 					</div>
 				</div>
