Added feature panel.

--- a/design/index.html
+++ b/design/index.html
@@ -26,7 +26,7 @@
 				remove-design="ctrl.removeDesign(args)">
 			</design-panel>
     	</div>
-   		<div class="col-md-6">
+   		<div class="col-md-6" data-ng-show="ctrl.selected()">
 			<feature-panel
 				selected="ctrl.selected()">
 			</feature-panel>
