--- a/design/index.html
+++ b/design/index.html
@@ -21,7 +21,7 @@
 				templates="ctrl.templates"
 				query="ctrl.query()"
 				selected="ctrl.selected()"
-				set-selected="ctrl.setSelected(args)"
+				toggle-selected="ctrl.toggleSelected(args)"
 				add-design="ctrl.addDesign()"
 				remove-design="ctrl.removeDesign(args)">
 			</design-panel>
