--- a/design/design.html
+++ b/design/design.html
@@ -17,32 +17,34 @@
 				</div>
 			</button>
 		</div>
-		<div class="panel-group designs" dnd-list="query().designs" dnd-allowed-types="['design']">
-			<div data-ng-repeat="design in query().designs"
-				class="panel panel-default"
-				dnd-type="'design'"
-				dnd-draggable="design"
-				dnd-effect-allowed="move"
-				dnd-moved="models.designs.splice($index, 1)">
-				<div class="panel-heading">{{design.name}}
-					<div class="glyphicon glyphicon-remove pull-right glyphicon-grey" data-ng-click="removeDesign({args: $index})">
+		<form role="form">
+			<div class="panel-group designs" dnd-list="query().designs" dnd-allowed-types="['design']">
+				<div data-ng-repeat="design in query().designs"
+					class="panel panel-default"
+					dnd-type="'design'"
+					dnd-draggable="design"
+					dnd-effect-allowed="move"
+					dnd-moved="models.designs.splice($index, 1)">
+					<div class="panel-heading">{{design.name}}
+						<div class="glyphicon glyphicon-remove pull-right glyphicon-grey" data-ng-click="removeDesign({args: $index})">
+						</div>
 					</div>
-				</div>
-				<div class="panel-body">
-					<div class="features" dnd-list="design.features" dnd-allowed-types="['feature']">
-						<div data-ng-repeat="feature in design.features"
-							data-ng-class="{selected: selected() === feature}"
-							data-ng-click="toggleSelected({args: feature})"
-							class="feature SO{{feature.typ.replace('http://purl.obolibrary.org/obo/SO_', '')}}"
-							dnd-type="'feature'"
-							dnd-draggable="feature"
-							dnd-effect-allowed="move"
-							dnd-moved="design.features.splice($index, 1)">
+					<div class="panel-body">
+						<div class="features" dnd-list="design.features" dnd-allowed-types="['feature']">
+							<div data-ng-repeat="feature in design.features"
+								data-ng-class="{selected: selected() === feature}"
+								data-ng-click="toggleSelected({args: feature})"
+								class="feature SO{{feature.typ.replace('http://purl.obolibrary.org/obo/SO_', '')}}"
+								dnd-type="'feature'"
+								dnd-draggable="feature"
+								dnd-effect-allowed="move"
+								dnd-moved="design.features.splice($index, 1)">
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</form>
 		<div class="glyphicon glyphicon-plus pull-right glyphicon-grey" data-ng-click="addDesign()">
 		</div>
 	</div>
