--- a/design/feature.html
+++ b/design/feature.html
@@ -5,7 +5,7 @@
 <div class="panel panel-default">
 	<div class="panel-heading">Feature</div>
 	<div class="panel-body">
-		<form class="form-horizontal" role="form" name="form">
+		<form class="form-horizontal" role="form">
 			<div class="form-group">
 				<label class="col-xs-4 col-form-label">Name:</label>
 				<div class="col-xs-8">
